# JUPITER_FAUCET_SUITE

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.repro  README.md  canister_ids.json  deny.toml  dfx.json  icp.yaml  main.rs  osv-scanner.toml  package-lock.json  package.json  rust-toolchain.toml
canisters/disburser/: Cargo.toml  README.md  build.rs  mainnet-install-args.did
canisters/disburser/src/: lib.rs  logic.rs  policy.rs  state.rs
canisters/disburser/src/clients/: governance.rs  ledger.rs  mod.rs
canisters/disburser/src/scheduler/: mod.rs  payout_plan.rs  prelude.rs  rescue.rs  tests.rs  tick.rs
canisters/faucet/: Cargo.toml  README.md  build.rs  jupiter_faucet.did  jupiter_faucet_debug.did  mainnet-install-args.did
canisters/faucet/src/: lib.rs  logic.rs  policy.rs  state.rs
canisters/faucet/src/clients/: canister_info.rs  cmc.rs  governance.rs  mod.rs
canisters/faucet/src/scheduler/: cmc_notify.rs  cmc_notify_transfer.rs  debug_entrypoints.rs  index_health.rs  logging.rs  mod.rs  neuron_staking.rs  prelude.rs  rescue.rs  route_accounting.rs  scan.rs  tests.rs  tick.rs
canisters/historian/: Cargo.toml  README.md  build.rs  jupiter_historian.did  jupiter_historian_debug.did  mainnet-install-args.did
canisters/historian/src/: api.rs  debug.rs  lib.rs  lib_tests.rs  lifecycle.rs  logic.rs  normalization.rs  read_model.rs  relay_setup.rs
canisters/historian/src/clients/: blackhole.rs  governance.rs  index.rs  mod.rs  sns_root.rs  sns_wasm.rs
canisters/historian/src/scheduler/: commitment_indexer.rs  commitment_indexer_apply.rs  commitment_lists.rs  cycles_probe.rs  cycles_probe_planning.rs  guards.rs  logging.rs  mod.rs  prelude.rs  route_transfer_indexer.rs  (+4 more)
canisters/relay/: Cargo.toml  README.md  build.rs  jupiter_relay_debug.did  mainnet-install-args.did
canisters/relay/src/: lib.rs  logic.rs  state.rs
crates/ic-clients/: Cargo.toml
crates/ic-clients/src/: account.rs  account_identifier.rs  cmc.rs  constants.rs  cycles_probe.rs  governance.rs  index.rs  ledger.rs  lib.rs  lifecycle.rs  management.rs  sns.rs  timer_guard.rs  xrc.rs
jupiter-disburser/: Cargo.toml  README.md  build.rs  jupiter_disburser.did  jupiter_disburser_debug.did  mainnet-install-args.did
jupiter-disburser/src/: lib.rs  logging.rs  logic.rs  nns_types.rs  policy.rs  scheduler.rs  staging.rs  state.rs
jupiter-disburser/src/clients/: governance.rs  ledger.rs  mod.rs
jupiter-disburser/src/scheduler/: debug.rs  debug_entrypoints.rs  logging.rs  mod.rs  payout_plan.rs  prelude.rs  rescue.rs  tests.rs  tick.rs
jupiter-faucet/: Cargo.toml  README.md  build.rs  jupiter_faucet.did  jupiter_faucet_debug.did  mainnet-install-args.did
jupiter-faucet-frontend/: Cargo.toml  README.md
jupiter-faucet-frontend/assets/: 404.html  base.css  hero.js  index.html  live-metrics.html  loading-overlay.js  metrics.css  navbar.css  navbar.js
jupiter-faucet-frontend/assets/background-orbit/: background-orbit.css  background-orbit.js
jupiter-faucet-frontend/frontend-src/: build-frontend.mjs
jupiter-faucet-frontend/frontend-src/src/: advanced-memo-builder.js  chart-rendering.js  dashboard-data.js  dom-helpers.js  historian-fault.js  main.js  neuron-details-controller.js  projection-simulator.js  registered-page-state.js  tracker-cycles.js
jupiter-faucet-frontend/frontend-src/test/: advanced-memo-builder.test.mjs  chart-rendering.test.mjs  dashboard-data.local-replica.test.mjs  dashboard-data.test.mjs  dashboard-tables-controller.test.mjs  dom-helpers.test.mjs  hash-routes.test.mjs  historian-fault.test.mjs  index-transactions.test.mjs  maturity-disbursement.test.mjs  neuron-details-controller.test.mjs  projection-simulator.test.mjs  registered-page-state.test.mjs  simulator-pane-markup.test.mjs  source-pane-controller.test.mjs  tracker-controller.test.mjs  tracker-cycles.test.mjs  xss-regression.test.mjs
jupiter-faucet-frontend/src/: lib.rs
jupiter-faucet/src/: lib.rs  logic.rs  policy.rs  scheduler.rs  state.rs
jupiter-faucet/src/clients/: canister_info.rs  cmc.rs  governance.rs  index.rs  ledger.rs  mod.rs
jupiter-faucet/src/scheduler/: cmc_notify.rs  cmc_notify_transfer.rs  debug.rs  debug_entrypoints.rs  index_health.rs  logging.rs  mod.rs  neuron_staking.rs  prelude.rs  rescue.rs  route_accounting.rs  scan.rs  tests.rs  tick.rs
jupiter-historian/: Cargo.toml  README.md  build.rs  jupiter_historian.did  jupiter_historian_debug.did  mainnet-install-args.did
jupiter-historian/src/: api.rs  debug.rs  lib.rs  lib_tests.rs  lifecycle.rs  logic.rs  normalization.rs  read_model.rs  scheduler.rs  state.rs
jupiter-historian/src/clients/: blackhole.rs  governance.rs  index.rs  mod.rs  sns_root.rs  sns_wasm.rs  xrc.rs
jupiter-historian/src/scheduler/: commitment_indexer.rs  commitment_indexer_apply.rs  commitment_lists.rs  cycles_probe.rs  cycles_probe_planning.rs  guards.rs  logging.rs  mod.rs  prelude.rs  route_transfer_indexer.rs  route_transfer_indexer_header.rs  sns_discovery.rs  tests.rs  tick.rs
jupiter-historian/src/state/: access.rs  commitments.rs  conversions.rs  cycles.rs  migrations.rs  mod.rs  routes.rs  snapshots.rs  stable.rs  tests.rs  types.rs
jupiter-relay/: Cargo.toml  README.md  jupiter_relay.did  jupiter_relay_debug.did  mainnet-install-args.did
jupiter-relay/src/: lib.rs  logic.rs  state.rs
jupiter-relay/src/clients/: cmc.rs  mod.rs
jupiter-relay/src/scheduler/: logging.rs  tick.rs  transfer.rs
tests/mocks/mock-icrc-ledger/: Cargo.toml  mock_icrc_ledger.did
tests/mocks/mock-legacy-historian-v1/: Cargo.toml
tests/mocks/mock-nns-governance/: Cargo.toml  mock_nns_governance.did
tools/xtask/: Cargo.toml  README.md
tools/xtask/src/: cli.rs  constants.rs  main.rs  process.rs  test_runner.rs  workspace.rs
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
xtask/src/pocketIC/: e2e.rs  faucet_e2e.rs  jupiter_disburser_integration.rs  jupiter_faucet_integration.rs  jupiter_historian_integration.rs  jupiter_relay_integration.rs  real_blackhole.rs
xtask/tests/: e2e.rs  jupiter_disburser_integration.rs  jupiter_faucet_integration.rs
(+256 files in other folders)
