[workspace]
resolver = "2"
members = [
  "jupiter-disburser",
  "jupiter-lifeline",
  "jupiter-faucet",
  "jupiter-build-support",
  "jupiter-historian",
  "jupiter-ic-clients",
  "jupiter-memo-policy",
  "jupiter-sns-rewards",
  "jupiter-faucet-frontend",
  "xtask",
  "xtask/src/mocks/mock_icrc_ledger",
  "xtask/src/mocks/mock_nns_governance",
  "xtask/src/mocks/mock_icp_index",
  "xtask/src/mocks/mock_cmc",
  "xtask/src/mocks/mock_xrc",
  "xtask/src/mocks/mock_blackhole",
  "xtask/src/mocks/mock_sns_wasm",
  "xtask/src/mocks/mock_sns_root",
  "jupiter-nns-types",
]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
candid = "0.10"
crc32fast = "1"
hex = "0.4"
ic-cdk = "0.19"
ic-cdk-timers = "1.0.0"
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "b4b0230aa1ed1c94d3674a9a27d60b724edb5cd4" }
ic-stable-structures = "0.6"
ic-nns-common = { git = "https://github.com/dfinity/ic", rev = "b4b0230aa1ed1c94d3674a9a27d60b724edb5cd4" }
ic-nns-governance-api = { git = "https://github.com/dfinity/ic", rev = "b4b0230aa1ed1c94d3674a9a27d60b724edb5cd4" }
icrc-ledger-types = "0.1.12"
num-traits = "0.2"
pocket-ic = "12"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
sha2 = "0.10"
slog = "2"
thiserror = "1"
