[workspace]
resolver = "2"
members = [
  "canisters/disburser",
  "canisters/lifeline",
  "canisters/faucet",
  "canisters/historian",
  "canisters/relay",
  "canisters/sns-rewards",
  "canisters/frontend",

  "crates/build-support",
  "crates/ic-clients",
  "crates/memo-policy",
  "crates/nns-types",
  "crates/persistence-batch",

  "tools/xtask",

  "tests/mocks/mock-blackhole",
  "tests/mocks/mock-cmc",
  "tests/mocks/mock-icp-index",
  "tests/mocks/mock-icrc-ledger",
  "tests/mocks/mock-nns-governance",
  "tests/mocks/mock-sns-root",
  "tests/mocks/mock-sns-wasm",
  "tests/mocks/mock-xrc",
]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
candid = "0.10"
crc32fast = "1"
hex = "0.4"
ic-cdk = "0.19"
ic-cdk-timers = "1.0.0"
ic-base-types = { version = "0.9.0", git = "https://github.com/dfinity/ic", rev = "b4b0230aa1ed1c94d3674a9a27d60b724edb5cd4" }
ic-stable-structures = "0.6"
ic-nns-common = { version = "0.9.0", git = "https://github.com/dfinity/ic", rev = "b4b0230aa1ed1c94d3674a9a27d60b724edb5cd4" }
ic-nns-governance-api = { version = "0.9.0", git = "https://github.com/dfinity/ic", rev = "b4b0230aa1ed1c94d3674a9a27d60b724edb5cd4" }
icrc-ledger-types = "0.1.12"
num-traits = "0.2"
pocket-ic = "13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
slog = "2"
thiserror = "1"
tokio = { version = "1", features = ["rt"] }
