[workspace]
resolver = "2"
members = [
  "canisters/disburser",
  "canisters/lifeline",
  "canisters/faucet",
  "canisters/historian",
  "canisters/relay",
  "canisters/sns-rewards",
  "canisters/frontend",

  "crates/build-support",
  "crates/ic-clients",
  "crates/memo-policy",
  "crates/nns-types",
  "crates/persistence-batch",

  "tools/nns-bindgen-check",
  "tools/xtask",

  "tests/mocks/mock-blackhole",
  "tests/mocks/mock-cmc",
  "tests/mocks/mock-icp-index",
  "tests/mocks/mock-icrc-ledger",
  "tests/mocks/mock-nns-governance",
  "tests/mocks/mock-sns-root",
  "tests/mocks/mock-sns-wasm",
  "tests/mocks/mock-xrc",
]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
candid = "0.10"
crc32fast = "1"
hex = "0.4"
ic-cdk = "0.20.1"
ic-cdk-timers = "1.0.0"
ic-stable-structures = "0.6"
icrc-ledger-types = "0.1.12"
num-traits = "0.2"
pocket-ic = "13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
slog = "2"
thiserror = "1"
tokio = { version = "1", features = ["rt"] }
