[package]
build = "build.rs"
name = "jupiter-disburser"
version = "0.2.0"
edition = "2021"

[[test]]
name = "jupiter_disburser_integration"
path = "../xtask/src/pocketIC/jupiter_disburser_integration.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
async-trait = "0.1"
num-traits = "0.2"

ic-cdk = "0.19"
ic-cdk-timers = "1.0.0"
icrc-ledger-types = "0.1.12"
ic-stable-structures = "0.6"

[features]
debug_api = []

[dev-dependencies]
anyhow = "1"
candid = "0.10"
hex = "0.4"
icrc-ledger-types = "0.1"
pocket-ic = "12"
slog = "2"
sha2 = "0.10"
crc32fast = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"

[build-dependencies]
serde_json = "1"
