[package]
name = "jupiter-faucet-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.19"
ic-asset-certification = { path = "../third_party/response-verification/ic-asset-certification" }
ic-http-certification = { path = "../third_party/response-verification/ic-http-certification" }
include_dir = { version = "0.7", features = ["glob"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
