[package]
name = "jupiter-faucet-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-asset-certification = { path = "../third_party/response-verification/ic-asset-certification" }
ic-http-certification = { path = "../third_party/response-verification/ic-http-certification" }
include_dir = { version = "0.7", features = ["glob"] }
serde = { workspace = true }
serde_json = { workspace = true }
