[package]
build = "build.rs"
name = "jupiter-faucet"
version = "0.2.0"
edition = "2021"

[[test]]
name = "jupiter_faucet_integration"
path = "../xtask/src/pocketIC/jupiter_faucet_integration.rs"


[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
async-trait = "0.1"
num-traits = "0.2"
sha2 = "0.10"
hex = "0.4"

ic-cdk = "0.19"
ic-cdk-timers = "1.0.0"
icrc-ledger-types = "0.1.12"
crc32fast = "1"

[features]
debug_api = []

[dev-dependencies]
anyhow = "1"
candid = "0.10"
hex = "0.4"
pocket-ic = "12"
slog = "2"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
icrc-ledger-types = "0.1.12"
crc32fast = "1"

[build-dependencies]
serde_json = "1"
