[package]
build = "build.rs"
name = "jupiter-faucet"
version = "0.2.0"
edition = "2021"

[[test]]
name = "jupiter_faucet_integration"
path = "../xtask/src/pocketIC/jupiter_faucet_integration.rs"


[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
icrc-ledger-types = { workspace = true }
ic-stable-structures = { workspace = true }
crc32fast = { workspace = true }
jupiter-ic-clients = { path = "../jupiter-ic-clients" }
jupiter-memo-policy = { path = "../jupiter-memo-policy" }
jupiter-nns-types = { path = "../jupiter-nns-types" }

[features]
debug_api = []

[dev-dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
hex = { workspace = true }
pocket-ic = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
icrc-ledger-types = { workspace = true }
ic-stable-structures = { workspace = true }
crc32fast = { workspace = true }
jupiter-memo-policy = { path = "../jupiter-memo-policy" }

[build-dependencies]
serde_json = { workspace = true }
