[package]
build = "build.rs"
name = "jupiter-historian"
version = "0.1.0"
edition = "2021"

[[test]]
name = "jupiter_historian_integration"
path = "../xtask/src/pocketIC/jupiter_historian_integration.rs"


[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
num-traits = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
icrc-ledger-types = { workspace = true }
ic-stable-structures = { workspace = true }
jupiter-ic-clients = { path = "../jupiter-ic-clients" }
jupiter-persistence-batch = { path = "../jupiter-persistence-batch" }
jupiter-memo-policy = { path = "../jupiter-memo-policy" }
jupiter-nns-types = { path = "../jupiter-nns-types" }

[features]
debug_api = []

[dev-dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
hex = { workspace = true }
pocket-ic = { workspace = true }
serde = { workspace = true }
icrc-ledger-types = { workspace = true }
ic-stable-structures = { workspace = true }
futures = "0.3"
slog = { workspace = true }

[build-dependencies]
jupiter-build-support = { path = "../jupiter-build-support" }
