[package]
build = "build.rs"
name = "jupiter-relay"
version = "0.1.0"
edition = "2021"

[[test]]
name = "jupiter_relay_integration"
path = "../xtask/src/pocketIC/jupiter_relay_integration.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = { workspace = true }
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
icrc-ledger-types = { workspace = true }
jupiter-ic-clients = { path = "../jupiter-ic-clients" }
jupiter-nns-types = { path = "../jupiter-nns-types" }
serde = { workspace = true }
thiserror = { workspace = true }

[features]
debug_api = []

[dev-dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
icrc-ledger-types = { workspace = true }
pocket-ic = { workspace = true }
slog = { workspace = true }

[build-dependencies]
jupiter-build-support = { path = "../jupiter-build-support" }
