[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
candid = "0.10"
hex = "0.4"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
icrc-ledger-types = "0.1.12"
crc32fast = "1"
sha2 = "0.10"

[dev-dependencies]
pocket-ic = "12.0.0"
serde_bytes = "0.11"
slog = "2"

[[test]]
name = "jupiter_faucet_integration"
path = "src/pocketIC/jupiter_faucet_integration.rs"

[[test]]
name = "jupiter_disburser_integration"
path = "src/pocketIC/jupiter_disburser_integration.rs"

[[test]]
name = "e2e"
path = "src/pocketIC/e2e.rs"
