[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
hex = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
icrc-ledger-types = { workspace = true }
crc32fast = { workspace = true }
sha2 = { workspace = true }
jupiter-ic-clients = { path = "../jupiter-ic-clients" }
jupiter-nns-types = { path = "../jupiter-nns-types" }

[dev-dependencies]
pocket-ic = { workspace = true }
serde_bytes = { workspace = true }
slog = { workspace = true }

[[test]]
name = "jupiter_faucet_integration"
path = "src/pocketIC/jupiter_faucet_integration.rs"

[[test]]
name = "jupiter_disburser_integration"
path = "src/pocketIC/jupiter_disburser_integration.rs"

[[test]]
name = "e2e"
path = "src/pocketIC/e2e.rs"
