[package]
build = "build.rs"
name = "jupiter-disburser"
version = "0.2.0"
edition = "2021"

[[test]]
name = "jupiter_disburser_integration"
path = "../../tests/pocketic/jupiter_disburser_integration.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
icrc-ledger-types = { workspace = true }
ic-stable-structures = { workspace = true }
jupiter-ic-clients = { path = "../../crates/ic-clients" }
jupiter-persistence-batch = { path = "../../crates/persistence-batch" }
jupiter-nns-types = { path = "../../crates/nns-types" }

[features]
debug_api = []

[dev-dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
hex = { workspace = true }
icrc-ledger-types = { workspace = true }
pocket-ic = { workspace = true }
slog = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
jupiter-build-support = { path = "../../crates/build-support" }
