[package]
build = "build.rs"
name = "jupiter-disburser"
version = "0.2.0"
edition = "2021"
publish = false

[[test]]
name = "jupiter_disburser_integration"
path = "../../tests/pocketic/jupiter_disburser_integration.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
icrc-ledger-types = { workspace = true }
ic-stable-structures = { workspace = true }
jupiter-ic-clients = { version = "0.1.0", path = "../../crates/ic-clients" }
jupiter-canister-logging = { version = "0.1.0", path = "../../crates/canister-logging" }
jupiter-persistence-batch = { version = "0.1.0", path = "../../crates/persistence-batch" }
jupiter-nns-types = { version = "0.1.0", path = "../../crates/nns-types" }

[features]
debug_api = []

[dev-dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
hex = { workspace = true }
icrc-ledger-types = { workspace = true }
pocket-ic = { workspace = true }
slog = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
jupiter-build-support = { version = "0.1.0", path = "../../crates/build-support" }
