[package]
name = "jupiter-ic-clients"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

ic-cdk = { workspace = true }
icrc-ledger-types = { workspace = true }

crc32fast = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
