[package]
name = "mock-icrc-ledger"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
serde = { workspace = true }
ic-cdk = { workspace = true }
icrc-ledger-types = { workspace = true }
num-traits = { workspace = true }
jupiter-ic-clients = { version = "0.1.0", path = "../../../crates/ic-clients" }
