[package]
name = "mock-nns-governance"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
serde = { workspace = true }
ic-cdk = { workspace = true }
jupiter-nns-types = { version = "0.1.0", path = "../../../crates/nns-types" }
