[package]
name = "mock-icrc-ledger"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
serde = { workspace = true }
ic-cdk = { workspace = true }
icrc-ledger-types = { workspace = true }
num-traits = { workspace = true }
jupiter-ic-clients = { path = "../../../../jupiter-ic-clients" }
